kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: diario-sre
  labels:
    app: diario-sre
spec:
  selector:
    app: diario-sre
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
